# image_viewer_rs

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  image.rs  main.rs  path.rs  state.rs  utils.rs
src-yew/: Cargo.toml  index.html
src-yew/public/: glue.js  main.css
src-yew/src/: command.rs  key_action.rs  main.rs
