[package]
name = "src-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
js-sys = "0.3.60"
log = "0.4.17"
stylist = "0.10.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
yew = "0.19.3"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "KeyboardEvent",
]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 'z'
lto = true
